gen/com/intellij/plugins/haxe/lang/parser/HaxeParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.plugins.haxe.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.openapi.diagnostic.Logger;
import static com.intellij.plugins.haxe.lang.lexer.HaxeTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class HaxeParser implements PsiParser {

  public static final Logger LOG_ = Logger.getInstance("com.intellij.plugins.haxe.lang.parser.HaxeParser");

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, EXTENDS_SETS_);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    if (root_ == ABSTRACT_CLASS_DECLARATION) {
      result_ = abstractClassDeclaration(builder_, 0);
    }
    else if (root_ == ACCESS) {
      result_ = access(builder_, 0);
    }
    else if (root_ == ADDITIVE_EXPRESSION) {
      result_ = additiveExpression(builder_, 0);
    }
    else if (root_ == ANONYMOUS_FUNCTION_DECLARATION) {
      result_ = anonymousFunctionDeclaration(builder_, 0);
    }
    else if (root_ == ANONYMOUS_TYPE) {
      result_ = anonymousType(builder_, 0);
    }
    else if (root_ == ANONYMOUS_TYPE_BODY) {
      result_ = anonymousTypeBody(builder_, 0);
    }
    else if (root_ == ANONYMOUS_TYPE_FIELD) {
      result_ = anonymousTypeField(builder_, 0);
    }
    else if (root_ == ANONYMOUS_TYPE_FIELD_LIST) {
      result_ = anonymousTypeFieldList(builder_, 0);
    }
    else if (root_ == ARRAY_ACCESS_EXPRESSION) {
      result_ = arrayAccessExpression(builder_, 0);
    }
    else if (root_ == ARRAY_LITERAL) {
      result_ = arrayLiteral(builder_, 0);
    }
    else if (root_ == ASSIGN_EXPRESSION) {
      result_ = assignExpression(builder_, 0);
    }
    else if (root_ == ASSIGN_OPERATION) {
      result_ = assignOperation(builder_, 0);
    }
    else if (root_ == AUTO_BUILD_MACRO) {
      result_ = autoBuildMacro(builder_, 0);
    }
    else if (root_ == BIT_OPERATION) {
      result_ = bitOperation(builder_, 0);
    }
    else if (root_ == BITMAP_META) {
      result_ = bitmapMeta(builder_, 0);
    }
    else if (root_ == BITWISE_EXPRESSION) {
      result_ = bitwiseExpression(builder_, 0);
    }
    else if (root_ == BLOCK_STATEMENT) {
      result_ = blockStatement(builder_, 0);
    }
    else if (root_ == BREAK_STATEMENT) {
      result_ = breakStatement(builder_, 0);
    }
    else if (root_ == BUILD_MACRO) {
      result_ = buildMacro(builder_, 0);
    }
    else if (root_ == CALL_EXPRESSION) {
      result_ = callExpression(builder_, 0);
    }
    else if (root_ == CAST_EXPRESSION) {
      result_ = castExpression(builder_, 0);
    }
    else if (root_ == CATCH_STATEMENT) {
      result_ = catchStatement(builder_, 0);
    }
    else if (root_ == CLASS_BODY) {
      result_ = classBody(builder_, 0);
    }
    else if (root_ == CLASS_DECLARATION) {
      result_ = classDeclaration(builder_, 0);
    }
    else if (root_ == COMPARE_EXPRESSION) {
      result_ = compareExpression(builder_, 0);
    }
    else if (root_ == COMPARE_OPERATION) {
      result_ = compareOperation(builder_, 0);
    }
    else if (root_ == COMPONENT_NAME) {
      result_ = componentName(builder_, 0);
    }
    else if (root_ == CONTINUE_STATEMENT) {
      result_ = continueStatement(builder_, 0);
    }
    else if (root_ == CUSTOM_META) {
      result_ = customMeta(builder_, 0);
    }
    else if (root_ == DECLARATION_ATTRIBUTE) {
      result_ = declarationAttribute(builder_, 0);
    }
    else if (root_ == DEFAULT_CASE) {
      result_ = defaultCase(builder_, 0);
    }
    else if (root_ == DO_WHILE_STATEMENT) {
      result_ = doWhileStatement(builder_, 0);
    }
    else if (root_ == ENUM_BODY) {
      result_ = enumBody(builder_, 0);
    }
    else if (root_ == ENUM_CONSTRUCTOR_PARAMETERS) {
      result_ = enumConstructorParameters(builder_, 0);
    }
    else if (root_ == ENUM_DECLARATION) {
      result_ = enumDeclaration(builder_, 0);
    }
    else if (root_ == ENUM_VALUE_DECLARATION) {
      result_ = enumValueDeclaration(builder_, 0);
    }
    else if (root_ == EXPRESSION) {
      result_ = expression(builder_, 0);
    }
    else if (root_ == EXPRESSION_LIST) {
      result_ = expressionList(builder_, 0);
    }
    else if (root_ == EXTERN_CLASS_DECLARATION) {
      result_ = externClassDeclaration(builder_, 0);
    }
    else if (root_ == EXTERN_CLASS_DECLARATION_BODY) {
      result_ = externClassDeclarationBody(builder_, 0);
    }
    else if (root_ == EXTERN_FUNCTION_DECLARATION) {
      result_ = externFunctionDeclaration(builder_, 0);
    }
    else if (root_ == EXTERN_OR_PRIVATE) {
      result_ = externOrPrivate(builder_, 0);
    }
    else if (root_ == FAKE_ENUM_META) {
      result_ = fakeEnumMeta(builder_, 0);
    }
    else if (root_ == FOR_STATEMENT) {
      result_ = forStatement(builder_, 0);
    }
    else if (root_ == FUNCTION_DECLARATION_WITH_ATTRIBUTES) {
      result_ = functionDeclarationWithAttributes(builder_, 0);
    }
    else if (root_ == FUNCTION_LITERAL) {
      result_ = functionLiteral(builder_, 0);
    }
    else if (root_ == FUNCTION_PROTOTYPE_DECLARATION_WITH_ATTRIBUTES) {
      result_ = functionPrototypeDeclarationWithAttributes(builder_, 0);
    }
    else if (root_ == FUNCTION_TYPE) {
      result_ = functionType(builder_, 0);
    }
    else if (root_ == GENERIC_LIST_PART) {
      result_ = genericListPart(builder_, 0);
    }
    else if (root_ == GENERIC_PARAM) {
      result_ = genericParam(builder_, 0);
    }
    else if (root_ == GETTER_META) {
      result_ = getterMeta(builder_, 0);
    }
    else if (root_ == IDENTIFIER) {
      result_ = identifier(builder_, 0);
    }
    else if (root_ == IF_STATEMENT) {
      result_ = ifStatement(builder_, 0);
    }
    else if (root_ == IMPORT_STATEMENT) {
      result_ = importStatement(builder_, 0);
    }
    else if (root_ == INHERIT) {
      result_ = inherit(builder_, 0);
    }
    else if (root_ == INHERIT_LIST) {
      result_ = inheritList(builder_, 0);
    }
    else if (root_ == INTERFACE_BODY) {
      result_ = interfaceBody(builder_, 0);
    }
    else if (root_ == INTERFACE_DECLARATION) {
      result_ = interfaceDeclaration(builder_, 0);
    }
    else if (root_ == ITERABLE) {
      result_ = iterable(builder_, 0);
    }
    else if (root_ == ITERATOR_EXPRESSION) {
      result_ = iteratorExpression(builder_, 0);
    }
    else if (root_ == LITERAL_EXPRESSION) {
      result_ = literalExpression(builder_, 0);
    }
    else if (root_ == LOCAL_FUNCTION_DECLARATION) {
      result_ = localFunctionDeclaration(builder_, 0);
    }
    else if (root_ == LOCAL_VAR_DECLARATION) {
      result_ = localVarDeclaration(builder_, 0);
    }
    else if (root_ == LOCAL_VAR_DECLARATION_PART) {
      result_ = localVarDeclarationPart(builder_, 0);
    }
    else if (root_ == LOGIC_AND_EXPRESSION) {
      result_ = logicAndExpression(builder_, 0);
    }
    else if (root_ == LOGIC_OR_EXPRESSION) {
      result_ = logicOrExpression(builder_, 0);
    }
    else if (root_ == LONG_TEMPLATE_ENTRY) {
      result_ = longTemplateEntry(builder_, 0);
    }
    else if (root_ == META_KEY_VALUE) {
      result_ = metaKeyValue(builder_, 0);
    }
    else if (root_ == META_META) {
      result_ = metaMeta(builder_, 0);
    }
    else if (root_ == MULTIPLICATIVE_EXPRESSION) {
      result_ = multiplicativeExpression(builder_, 0);
    }
    else if (root_ == NATIVE_META) {
      result_ = nativeMeta(builder_, 0);
    }
    else if (root_ == NEW_EXPRESSION) {
      result_ = newExpression(builder_, 0);
    }
    else if (root_ == NS_META) {
      result_ = nsMeta(builder_, 0);
    }
    else if (root_ == OBJECT_LITERAL) {
      result_ = objectLiteral(builder_, 0);
    }
    else if (root_ == OBJECT_LITERAL_ELEMENT) {
      result_ = objectLiteralElement(builder_, 0);
    }
    else if (root_ == OVERLOAD_META) {
      result_ = overloadMeta(builder_, 0);
    }
    else if (root_ == PACKAGE_STATEMENT) {
      result_ = packageStatement(builder_, 0);
    }
    else if (root_ == PARAMETER) {
      result_ = parameter(builder_, 0);
    }
    else if (root_ == PARAMETER_LIST) {
      result_ = parameterList(builder_, 0);
    }
    else if (root_ == PARENTHESIZED_EXPRESSION) {
      result_ = parenthesizedExpression(builder_, 0);
    }
    else if (root_ == PREFIX_EXPRESSION) {
      result_ = prefixExpression(builder_, 0);
    }
    else if (root_ == PROPERTY_ACCESSOR) {
      result_ = propertyAccessor(builder_, 0);
    }
    else if (root_ == PROPERTY_DECLARATION) {
      result_ = propertyDeclaration(builder_, 0);
    }
    else if (root_ == REFERENCE_EXPRESSION) {
      result_ = referenceExpression(builder_, 0);
    }
    else if (root_ == REGULAR_EXPRESSION_LITERAL) {
      result_ = regularExpressionLiteral(builder_, 0);
    }
    else if (root_ == REQUIRE_META) {
      result_ = requireMeta(builder_, 0);
    }
    else if (root_ == RETURN_STATEMENT) {
      result_ = returnStatement(builder_, 0);
    }
    else if (root_ == RETURN_STATEMENT_WITHOUT_SEMICOLON) {
      result_ = returnStatementWithoutSemicolon(builder_, 0);
    }
    else if (root_ == SETTER_META) {
      result_ = setterMeta(builder_, 0);
    }
    else if (root_ == SHIFT_EXPRESSION) {
      result_ = shiftExpression(builder_, 0);
    }
    else if (root_ == SHIFT_OPERATOR) {
      result_ = shiftOperator(builder_, 0);
    }
    else if (root_ == SHIFT_RIGHT_OPERATOR) {
      result_ = shiftRightOperator(builder_, 0);
    }
    else if (root_ == SHORT_TEMPLATE_ENTRY) {
      result_ = shortTemplateEntry(builder_, 0);
    }
    else if (root_ == STRING_LITERAL_EXPRESSION) {
      result_ = stringLiteralExpression(builder_, 0);
    }
    else if (root_ == SUFFIX_EXPRESSION) {
      result_ = suffixExpression(builder_, 0);
    }
    else if (root_ == SUPER_EXPRESSION) {
      result_ = superExpression(builder_, 0);
    }
    else if (root_ == SWITCH_BLOCK) {
      result_ = switchBlock(builder_, 0);
    }
    else if (root_ == SWITCH_CASE) {
      result_ = switchCase(builder_, 0);
    }
    else if (root_ == SWITCH_CASE_BLOCK) {
      result_ = switchCaseBlock(builder_, 0);
    }
    else if (root_ == SWITCH_CASE_EXPRESSION) {
      result_ = switchCaseExpression(builder_, 0);
    }
    else if (root_ == SWITCH_STATEMENT) {
      result_ = switchStatement(builder_, 0);
    }
    else if (root_ == TERNARY_EXPRESSION) {
      result_ = ternaryExpression(builder_, 0);
    }
    else if (root_ == THIS_EXPRESSION) {
      result_ = thisExpression(builder_, 0);
    }
    else if (root_ == THROW_STATEMENT) {
      result_ = throwStatement(builder_, 0);
    }
    else if (root_ == TRY_STATEMENT) {
      result_ = tryStatement(builder_, 0);
    }
    else if (root_ == TYPE) {
      result_ = type(builder_, 0);
    }
    else if (root_ == TYPE_EXTENDS) {
      result_ = typeExtends(builder_, 0);
    }
    else if (root_ == TYPE_LIST) {
      result_ = typeList(builder_, 0);
    }
    else if (root_ == TYPE_LIST_PART) {
      result_ = typeListPart(builder_, 0);
    }
    else if (root_ == TYPE_OR_ANONYMOUS) {
      result_ = typeOrAnonymous(builder_, 0);
    }
    else if (root_ == TYPE_PARAM) {
      result_ = typeParam(builder_, 0);
    }
    else if (root_ == TYPE_TAG) {
      result_ = typeTag(builder_, 0);
    }
    else if (root_ == TYPEDEF_DECLARATION) {
      result_ = typedefDeclaration(builder_, 0);
    }
    else if (root_ == UNSIGNED_SHIFT_RIGHT_OPERATOR) {
      result_ = unsignedShiftRightOperator(builder_, 0);
    }
    else if (root_ == USING_STATEMENT) {
      result_ = usingStatement(builder_, 0);
    }
    else if (root_ == VAR_DECLARATION) {
      result_ = varDeclaration(builder_, 0);
    }
    else if (root_ == VAR_DECLARATION_PART) {
      result_ = varDeclarationPart(builder_, 0);
    }
    else if (root_ == VAR_INIT) {
      result_ = varInit(builder_, 0);
    }
    else if (root_ == WHILE_STATEMENT) {
      result_ = whileStatement(builder_, 0);
    }
    else {
      result_ = parse_root_(root_, builder_, 0);
    }
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return haxeFile(builder_, level_ + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADDITIVE_EXPRESSION, ARRAY_ACCESS_EXPRESSION, ARRAY_LITERAL, ASSIGN_EXPRESSION,
      BITWISE_EXPRESSION, CALL_EXPRESSION, CAST_EXPRESSION, COMPARE_EXPRESSION,
      EXPRESSION, FUNCTION_LITERAL, ITERATOR_EXPRESSION, LITERAL_EXPRESSION,
      LOGIC_AND_EXPRESSION, LOGIC_OR_EXPRESSION, MULTIPLICATIVE_EXPRESSION, NEW_EXPRESSION,
      OBJECT_LITERAL, PARENTHESIZED_EXPRESSION, PREFIX_EXPRESSION, REFERENCE_EXPRESSION,
      REGULAR_EXPRESSION_LITERAL, SHIFT_EXPRESSION, STRING_LITERAL_EXPRESSION, SUFFIX_EXPRESSION,
      SUPER_EXPRESSION, SWITCH_CASE_EXPRESSION, TERNARY_EXPRESSION, THIS_EXPRESSION),
    create_token_set_(LITERAL_EXPRESSION, REGULAR_EXPRESSION_LITERAL),
  };

  /* ********************************************************** */
  // macroClass* 'private'? 'abstract' componentName genericParam? ('(' type ')')? (('from' | 'to') type)* '{' classBody '}'
  public static boolean abstractClassDeclaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "abstractClassDeclaration")) return false;
    boolean result_ = false;
    boolean pinned_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<abstract class declaration>");
    result_ = abstractClassDeclaration_0(builder_, level_ + 1);
    result_ = result_ && abstractClassDeclaration_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, KABSTRACT);
    pinned_ = result_; // pin = 3
    result_ = result_ && report_error_(builder_, componentName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, abstractClassDeclaration_4(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, abstractClassDeclaration_5(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, abstractClassDeclaration_6(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, PLCURLY)) && result_;
    result_ = pinned_ && report_error_(builder_, classBody(builder_, level_ + 1)) && result_;
    result_ = pinned_ && consumeToken(builder_, PRCURLY) && result_;
    exit_section_(builder_, level_, marker_, ABSTRACT_CLASS_DECLARATION, result_, pinned_, null);
    return result_ || pinned_;
  }

  // macroClass*
  private static boolean abstractClassDeclaration_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "abstractClassDeclaration_0")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!macroClass(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "abstractClassDeclaration_0", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // 'private'?
  private static boolean abstractClassDeclaration_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "abstractClassDeclaration_1")) return false;
    consumeToken(builder_, KPRIVATE);
    return true;
  }
